--- a/people.Rmd
+++ b/people.Rmd
@@ -47,7 +47,7 @@ Akanksha studies the introduction history of grain amaranth to India and the sou
 
 
 
-## PhD students
+## PhD candidates
 
 <div style="float: left">
 <img src="own_images/people/Corbinian_Graf.JPG" style="width: 100px ;border:10px solid white">
@@ -83,6 +83,28 @@ José is a PhD student studying gene flow between grain amaranth species and the
 <br>
 <br>
 <br>
+
+
+
+<div style="float: left">
+<img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white">
+</div>
+
+**Julio Martinez** 
+<div style="float: left">
+</div>
+Julio is a master student working on the molecular validation of domestication genes in grain amaranth and the conservation of the MBW regulation network.
+<!-- break -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
 
 <div style="float: left">
 <img src="own_images/people/kerstin.jpg" style="width: 100px ;border:10px solid white">
@@ -139,6 +161,29 @@ Tom is a master student studying the the amaranth transcriptome and the involvem
 <br>
 <br>
 
+
+
+<div style="float: left">
+<img src="own_images/people/yuna.png" style="width: 100px ;border:10px solid white">
+</div>
+
+
+
+**Yuna Zhang** 
+<div style="float: left">
+</div>
+Yuna studies polygenic adaptation and the evolution of trait syndromes as part of the TRR 341 
+
+<!-- break -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
 ## Lab manager
 
 <div style="float: left">
@@ -158,27 +203,6 @@ Roswitha runs the wet lab and does the pipetting magic
 <br>
 <br>
 
-
-
-## Master students
-
-
-<div style="float: left">
-<img src="own_images/people/Julio.jpg" style="width: 100px ;border:10px solid white">
-</div>
-
-**Julio Martinez** 
-<div style="float: left">
-</div>
-Julio is a master student working on the molecular validation of domestication genes in grain amaranth and the conservation of the MBW regulation network.
-<!-- break -->
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 
 
@@ -206,6 +230,27 @@ Vivien studies genetic determinants of germination in grain amaranth.
 <br>
 <br>
 <br>
+
+
+## Visitors
+
+<div style="float: left">
+<img src="own_images/people/roger_sulub.jpg" style="width: 100px ;border:10px solid white">
+</div>
+
+**Roger Antonio Sulub Tun ** 
+<div style="float: left">
+</div>
+Roger is a visiting PhD student from CICY in Mexico and studies the center of origin of *A. cruentus*
+<!-- break -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 
 ## Student helpers and interns
 
