--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,10 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### Febraury
 
+#### Thursday Febraury 23
+[Liang et al., 2023](https://www.science.org/doi/10.1126/science.adf1323)
+Taxon-specific, phased siRNAs underlie a speciation locus in monkeyflowers
+
 #### Thursday Febraury 9
 [Quagliariello et al., 2023](https://www.nature.com/articles/s41467-022-34416-0)
 Ancient oral microbiomes support gradual Neolithic dietary shifts towards agriculture
