--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,10 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### May
 
+#### Thursday May 25
+[Belluchi et al., 2023](https://www.nature.com/articles/s41467-023-37332-z)
+Selection and adaptive introgression guided the complex evolutionary history of the European common bean
+
 #### Thursday May 4
 [Simons et al., preprint](https://www.biorxiv.org/content/10.1101/2022.10.04.509926v1.full)
 Simple scaling laws control the genetic architectures of human complex traits
