--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,13 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 
 ### June
+#### Thursday June 22
+[Wuest et al., 2023](https://www.nature.com/articles/s41467-023-39130-z)
+Single-gene resolution of diversity-driven overyielding in plant genotype mixtures
+
+#### Thursday June 15
+[Fuller et al., 2023](https://www.cell.com/current-biology/fulltext/S0960-9822(23)00517-1)
+Plant domestication and agricultural ecologies
 
 #### Thursday June 1
 [Belluchi et al., 2023](https://www.researchsquare.com/article/rs-2976609/v1)
