--- a/publications.Rmd
+++ b/publications.Rmd
@@ -6,8 +6,13 @@
 
 ## Preprint
 
-* [Evolutionary rescue through gene flow despite genetic incompatibilities shaped diversity of the pseudo-cereal grain amaranth](https://doi.org/10.1101/2023.03.17.533106)
-**Gonçalves-Dias J, Singh A, Graf C and Stetter MG **
+* coming soon
+
+## 2023
+
+* [Genetic incompatibilities and evolutionary rescue by wild relatives shaped grain amaranth domestication](https://academic.oup.com/mbe/advance-article/doi/10.1093/molbev/msad177/7239273?utm_source=authortollfreelink&utm_campaign=mbe&utm_medium=email&guestAccessKey=172dbed5-2be8-44b6-9a54-2e1c537889d1) 
+**Gonçalves-Dias J, Singh A, Graf C and Stetter MG *Molecular Biology and Evolution*
+[Preprint](https://doi.org/10.1101/2023.03.17.533106)
 
 ## 2022
 
