--- a/reading.Rmd
+++ b/reading.Rmd
@@ -16,6 +16,10 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### March
 
+#### Tuesday March 12
+[ He et al, 2024](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-024-03203-z)
+Genomic insight into the origin, domestication, dispersal, diversification and human selection of Tartary buckwheat
+
 #### Tuesday March 5
 [ Walter et al, 2024](https://academic.oup.com/evlett/advance-article/doi/10.1093/evlett/qrad065/7577653)
 Environmental effects on genetic variance are likely to constrain adaptation in novel environments 
