--- a/people.Rmd
+++ b/people.Rmd
@@ -231,7 +231,7 @@ Maria studies of betalain accumulation and its fitness consequences under stress
 
 
 <div style="float: left">
-<img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+<img src="own_images/people/Carlotta_Sehl.jpg" style="width: 100px ;border:10px solid white">
 </div>
 
 **Carlotta Sehl** 
@@ -249,14 +249,16 @@ Maria studies of betalain accumulation and its fitness consequences under stress
 
 ## Student helpers and interns
 
+
 <div style="float: left">
-<img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+<img src="own_images/people/Aslinur_Aktürk.jpg" style="width: 100px ;border:10px solid white">
 </div>
 
-**Fernanda Daniela Giampaoli** 
+
+**Aslinur Aktürk** 
 <div style="float: left">
 </div>
-Fernanda helps with wet lab duties.
+Aslinur updates AmaranthGDB to the most recent reference genome.
 <!-- break -->
 <br>
 <br>
@@ -265,6 +267,7 @@ Fernanda helps with wet lab duties.
 <br>
 <br>
 <br>
+
 
 <div style="float: left">
 <img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
@@ -288,11 +291,10 @@ Laura helps with the plant work and seed handling
 <img src="own_images/people/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
 </div>
 
-
-**Aslinur Aktürk** 
+**Fernanda Daniela Giampaoli** 
 <div style="float: left">
 </div>
-Aslinur updates AmaranthGDB to the most recent reference genome.
+Fernanda helps with wet lab duties.
 <!-- break -->
 <br>
 <br>
@@ -301,6 +303,7 @@ Aslinur updates AmaranthGDB to the most recent reference genome.
 <br>
 <br>
 <br>
+
 
 
 
