--- a/people.Rmd
+++ b/people.Rmd
@@ -171,7 +171,7 @@ Yuna studies polygenic adaptation and the evolution of trait syndromes as part o
 **Katharina Borowski** 
 <div style="float: left">
 </div>
-Roswitha runs the office and does the paper work magic
+Katharina runs the office and does the paper work magic
 <!-- break -->
 <br>
 <br>
