--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,21 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### April
 
+#### Tuesday April 30
+No CROP
+
+#### Tuesday April 23
+[Sianta et al, 2024](https://www.pnas.org/doi/10.1073/pnas.2316008121)
+The extent of introgression between incipient Clarkia species is determined by temporal environmental variation and mating system
+
+#### Tuesday April 16
+TRR 341 seminar
+
+#### Tuesday April 9
+[Nocchi et al, preprint](https://www.biorxiv.org/content/10.1101/2024.04.02.587814v1)
+Repeated global adaptation across plant species
+
+
 #### Tuesday April 2
 Easter break
 
