--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,6 +12,24 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### July
+
+#### Tuesday July 2
+[Ament-Velásquez et al, 2022](https://academic.oup.com/mbe/article/39/11/msac242/6806091) 
+The Dynamics of Adaptation to Stress from Standing Genetic Variation and de novo Mutations
+
+### June
+
+#### Tuesday June 25
+[Zhang et al, 2024](https://www.science.org/doi/10.1126/science.ade4487) 
+Rice’s trajectory from wild to domesticated in East Asia
+
+
+#### Tuesday June 18
+[Smith and Hahn, preprint](https://www.biorxiv.org/content/10.1101/2023.10.27.564394v3) 
+Selection leads to false inferences of introgression using popular methods
+
+
 ### May
 
 #### Tuesday May 28
