--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,7 +12,14 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+### August
+Summer break
+
 ### July
+
+#### Tuesday July 30
+[Landis et al, 2024](https://www.science.org/doi/10.1126/science.adl0038) 
+Natural selection drives emergent genetic homogeneity in a century-scale experiment with barley
 
 #### Tuesday July 23
 [Arca et al, 2023](https://onlinelibrary.wiley.com/doi/full/10.1111/pbi.14022) 
